--- a/.github/workflows/vanilla-select-build.yml
+++ b/.github/workflows/vanilla-select-build.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -11,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -21,10 +17,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+
     - run: npm ci
     - run: npm run build --if-present
+
+    # Push to 'pre-built' branch
+    - name: Push to pre-built branch
+      if: github.ref == 'refs/heads/main'
+      run: |
+        git config --global user.name "${{ github.actor }}"
+        git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+        
+        git checkout -B pre-built
+        git add -f <path-to-build-folder>  # Replace with actual build output folder
+        git commit -m "Auto-generated build"
+        git push -u origin pre-built --force
